# arbiter

./: README.md  arbiter.cabal
app/: Main.hs
src/: Lib.hs
