name:                arbiter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/madjar/arbiter#readme
license:             BSD3
license-file:        LICENSE
author:              Georges Dubus
maintainer:          georges.dubus@compiletoi.net
copyright:           2015 Georges Dubus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       async,
                       base >= 4.7 && < 5,
                       bytestring,
                       concurrent-output,
                       extra,
                       http-client,
                       http-types,
                       wai
  default-language:    Haskell2010

executable arbiter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       arbiter
                     , base
                     , warp
  default-language:    Haskell2010

test-suite arbiter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arbiter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/madjar/arbiter
